--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint ./ --fix",
     "dev": "nodemon ./index.js",
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +15,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "nodemon": "^2.0.4"
   }
 }
