--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Ricardo Francisco Petul",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.26"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
