--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "tabWidth": 2,
   "singleQuote": true,
   "trailingComma": "es5",
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "endOfLine":"auto"
 }
