--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "Ricardo Francisco Petul",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
     "mongoose": "^5.9.26"
   },
   "devDependencies": {
