--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.26"
+    "mongoose": "^5.9.26",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
